Create basic html and styles
Create basic structure for sidebar, header and content sections

--- a/index.html
+++ b/index.html
@@ -6,5 +6,133 @@
 		<title>Admin Dashboard</title>
 		<link href="style.css" rel="stylesheet" />
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="sidebar">
+				<div>
+					<div class="img"></div>
+					<h1>Dashboard</h1>
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<div class="img"></div>
+							<a href="#">Home</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">Profile</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">Messages</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">History</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">Tasks</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">Communities</a>
+						</li>
+					</ul>
+				</nav>
+				<div>
+					<ul>
+						<li>
+							<div class="img"></div>
+							<a href="#">Settings</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">Support</a>
+						</li>
+						<li>
+							<div class="img"></div>
+							<a href="#">Privacy</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="header">
+				<div class="search-container">
+					<search>
+						<form action="" method="get" role="search">
+							<label for="search-input">
+								<div class="img"></div>
+								<input
+									type="search"
+									name="q"
+									id="search-input"
+									aria-label="Search through site content"
+									incremental
+									minlength="3"
+									required
+								/>
+							</label>
+						</form>
+					</search>
+				</div>
+				<div class="notification-container">
+					<div class="img"></div>
+					<div class="img"></div>
+					<div>Morgan Oakley</div>
+				</div>
+				<div class="profile">
+					<div class="img"></div>
+					<div>
+						<p>Hi there,</p>
+						<p>Morgan Oakley (@morgan)</p>
+					</div>
+				</div>
+				<div class="nav">
+					<ul>
+						<li>
+							<a href="#">New</a>
+						</li>
+						<li>
+							<a href="#">Upload</a>
+						</li>
+						<li>
+							<a href="#">Share</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="main-content">
+				<section class="your-projects">
+					<h2>Your Projects</h2>
+					<div class="cards">
+						<div class="card"></div>
+						<div class="card"></div>
+						<div class="card"></div>
+						<div class="card"></div>
+						<div class="card"></div>
+						<div class="card"></div>
+					</div>
+				</section>
+				<section class="announcements">
+					<h2>announcements</h2>
+					<div class="announcements-content">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</section>
+				<section class="trending">
+					<h2>trending</h2>
+					<div class="trending-content">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</body>
 </html>
