Add incomplete html and css to all page
Add html and styles for sidebar, header, main content and cards

--- a/index.html
+++ b/index.html
@@ -104,32 +104,177 @@
 				</div>
 			</div>
 			<div class="main-content">
-				<section class="your-projects">
+				<section class="projects">
 					<h2>Your Projects</h2>
 					<div class="cards">
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
+
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
 						<div class="card"></div>
 						<div class="card"></div>
 						<div class="card"></div>
-						<div class="card"></div>
-						<div class="card"></div>
+						<div class="card">
+							<h5>Super Cool Project</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
+								eligendi aut atque aspernatur, dolores molestiae saepe natus,
+								quam consectetur tempore nulla officia! Placeat.
+							</p>
+							<ul>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+								<li><div class="img"></div></li>
+							</ul>
+						</div>
 						<div class="card"></div>
 					</div>
 				</section>
 				<section class="announcements">
 					<h2>announcements</h2>
 					<div class="announcements-content">
-						<div></div>
-						<div></div>
-						<div></div>
+						<ul>
+							<li>
+								<h6>Site maintance</h6>
+								<p>
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+									Consectetur facere totam quia rem natus dolores.
+								</p>
+							</li>
+							<li>
+								<h6>Site maintance</h6>
+								<p>
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+									Consectetur facere totam quia rem natus dolores.
+								</p>
+							</li>
+							<li>
+								<h6>Site maintance</h6>
+								<p>
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+									Consectetur facere totam quia rem natus dolores.
+								</p>
+							</li>
+						</ul>
 					</div>
 				</section>
 				<section class="trending">
 					<h2>trending</h2>
 					<div class="trending-content">
-						<div></div>
-						<div></div>
-						<div></div>
-						<div></div>
+						<ul>
+							<li>
+								<h6>Site maintance</h6>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+							</li>
+							<li>
+								<h6>Site maintance</h6>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+							</li>
+							<li>
+								<h6>Site maintance</h6>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+							</li>
+							<li>
+								<h6>Site maintance</h6>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+							</li>
+						</ul>
 					</div>
 				</section>
 			</div>
