Add incomplete html and css to the main content
Add html and css for your-projects, announcements and trending sections

--- a/index.html
+++ b/index.html
@@ -227,55 +227,63 @@
 					</div>
 				</section>
 				<section class="announcements">
-					<h2>announcements</h2>
-					<div class="announcements-content">
-						<ul>
-							<li>
-								<h6>Site maintance</h6>
-								<p>
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-									Consectetur facere totam quia rem natus dolores.
-								</p>
-							</li>
-							<li>
-								<h6>Site maintance</h6>
-								<p>
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-									Consectetur facere totam quia rem natus dolores.
-								</p>
-							</li>
-							<li>
-								<h6>Site maintance</h6>
-								<p>
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-									Consectetur facere totam quia rem natus dolores.
-								</p>
-							</li>
-						</ul>
-					</div>
+					<h2>Announcements</h2>
+					<ul>
+						<li>
+							<h6>Site maintance</h6>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Consectetur facere totam quia rem natus dolores.
+							</p>
+						</li>
+						<li>
+							<h6>Site maintance</h6>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Consectetur facere totam quia rem natus dolores.
+							</p>
+						</li>
+						<li>
+							<h6>Site maintance</h6>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Consectetur facere totam quia rem natus dolores.
+							</p>
+						</li>
+					</ul>
 				</section>
 				<section class="trending">
-					<h2>trending</h2>
-					<div class="trending-content">
-						<ul>
-							<li>
+					<h2>Trending</h2>
+					<ul>
+						<li>
+							<div class="img"></div>
+							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-							</li>
-							<li>
+							</div>
+						</li>
+						<li>
+							<div class="img"></div>
+							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-							</li>
-							<li>
+							</div>
+						</li>
+						<li>
+							<div class="img"></div>
+							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-							</li>
-							<li>
+							</div>
+						</li>
+						<li>
+							<div class="img"></div>
+							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-							</li>
-						</ul>
-					</div>
+							</div>
+						</li>
+					</ul>
 				</section>
 			</div>
 		</div>
