Add complete html and css to header
Add html and css necessary to the header to be close enough to the
design file.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div class="notification-container">
 					<div class="img"></div>
 					<div class="img"></div>
-					<div>Morgan Oakley</div>
+					<p>Morgan Oakley</p>
 				</div>
 				<div class="profile">
 					<div class="img"></div>
