Add images and necessary styles to the page
Add images for the profile and icons for the links

--- a/index.html
+++ b/index.html
@@ -3,40 +3,89 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Admin Dashboard</title>
+		<title>Project Gallery</title>
 		<link href="style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div class="container">
 			<div class="sidebar">
 				<div>
-					<div class="img"></div>
+					<div class="img">
+						<img
+							src="./imgs/abacus.svg"
+							alt="abacus svg logo"
+							width="56px"
+							height="56px"
+						/>
+					</div>
 					<h1>Dashboard</h1>
 				</div>
 				<nav>
 					<ul>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/home.svg"
+									alt="home"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/profile.svg"
+									alt="profile"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Profile</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/messages.svg"
+									alt="messages"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Messages</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/history.svg"
+									alt="history"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">History</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/tasks.svg"
+									alt="tasks"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Tasks</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/communities.svg"
+									alt="communities"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Communities</a>
 						</li>
 					</ul>
@@ -44,15 +93,36 @@
 				<div>
 					<ul>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/settings.svg"
+									alt="settings"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Settings</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/support.svg"
+									alt="support"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Support</a>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/privacy.svg"
+									alt="privacy"
+									width="30px"
+									height="30px"
+								/>
+							</div>
 							<a href="#">Privacy</a>
 						</li>
 					</ul>
@@ -78,15 +148,38 @@
 					</search>
 				</div>
 				<div class="notification-container">
-					<div class="img"></div>
-					<div class="img"></div>
-					<p>Morgan Oakley</p>
+					<div class="img">
+						<img
+							src="./imgs/notifications.svg"
+							alt="notifications"
+							width="30px"
+							height="30px"
+						/>
+					</div>
+					<div class="img rounded">
+						<img
+							src="https://avatars.githubusercontent.com/u/16906161?v=4"
+							alt="Lucas Passeri`s Photo"
+							width="52px"
+							height="52px"
+							class="rounded"
+						/>
+					</div>
+					<p>Lucas Passeri</p>
 				</div>
 				<div class="profile">
-					<div class="img"></div>
+					<div class="img rounded">
+						<img
+							src="https://avatars.githubusercontent.com/u/16906161?v=4"
+							alt="Lucas Passeri`s Photo"
+							width="80px"
+							height="80px"
+							class="rounded"
+						/>
+					</div>
 					<div>
 						<p>Hi there,</p>
-						<p>Morgan Oakley (@morgan)</p>
+						<p>Lucas Passeri (@lucaspasseri)</p>
 					</div>
 				</div>
 				<div class="nav">
@@ -113,12 +206,40 @@
 								Lorem ipsum dolor sit amet consectetur adipisicing elit.
 								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
 								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat.
+								quam consectetur tempore nulla officia! Placeat. ! Placeat. !
+								Placeat. ! Placeat.
 							</p>
 							<ul>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/favorite.svg"
+											alt="favorite"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/view.svg"
+											alt="view"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/fork.svg"
+											alt="fork"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
 							</ul>
 						</div>
 						<div class="card">
@@ -130,9 +251,36 @@
 								quam consectetur tempore nulla officia! Placeat.
 							</p>
 							<ul>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/favorite.svg"
+											alt="favorite"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/view.svg"
+											alt="view"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/fork.svg"
+											alt="fork"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
 							</ul>
 						</div>
 						<div class="card">
@@ -144,9 +292,36 @@
 								quam consectetur tempore nulla officia! Placeat.
 							</p>
 							<ul>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/favorite.svg"
+											alt="favorite"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/view.svg"
+											alt="view"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/fork.svg"
+											alt="fork"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
 							</ul>
 						</div>
 						<div class="card">
@@ -158,9 +333,36 @@
 								quam consectetur tempore nulla officia! Placeat.
 							</p>
 							<ul>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/favorite.svg"
+											alt="favorite"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/view.svg"
+											alt="view"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/fork.svg"
+											alt="fork"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
 							</ul>
 						</div>
 						<div class="card">
@@ -172,9 +374,36 @@
 								quam consectetur tempore nulla officia! Placeat.
 							</p>
 							<ul>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/favorite.svg"
+											alt="favorite"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/view.svg"
+											alt="view"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/fork.svg"
+											alt="fork"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
 							</ul>
 						</div>
 						<div class="card">
@@ -186,9 +415,36 @@
 								quam consectetur tempore nulla officia! Placeat.
 							</p>
 							<ul>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
-								<li><div class="img"></div></li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/favorite.svg"
+											alt="favorite"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/view.svg"
+											alt="view"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
+								<li>
+									<div class="img">
+										<img
+											src="./imgs/fork.svg"
+											alt="fork"
+											width="28px"
+											height="28px"
+										/>
+									</div>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -223,28 +479,56 @@
 					<h2>Trending</h2>
 					<ul>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/boss.svg"
+									alt="boss"
+									width="52px"
+									height="52px"
+								/>
+							</div>
 							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 							</div>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/nice.svg"
+									alt="nice"
+									width="52px"
+									height="52px"
+								/>
+							</div>
 							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 							</div>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/dull.svg"
+									alt="dull"
+									width="52px"
+									height="52px"
+								/>
+							</div>
 							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 							</div>
 						</li>
 						<li>
-							<div class="img"></div>
+							<div class="img">
+								<img
+									src="./imgs/crap.svg"
+									alt="crap"
+									width="52px"
+									height="52px"
+								/>
+							</div>
 							<div>
 								<h6>Site maintance</h6>
 								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -254,5 +538,6 @@
 				</section>
 			</div>
 		</div>
+		<script src="app.js"></script>
 	</body>
 </html>
