Link my own projects to the cards
Add my own TOP`s projects to the cards in the main content section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,14 @@
 					<search>
 						<form action="" method="get" role="search">
 							<label for="search-input">
-								<div class="img"></div>
+								<div class="img">
+									<img
+										src="/imgs/magnify.svg"
+										alt="magnify"
+										width="30px"
+										height="30px"
+									/>
+								</div>
 								<input
 									type="search"
 									name="q"
@@ -168,18 +175,31 @@
 					<p>Lucas Passeri</p>
 				</div>
 				<div class="profile">
-					<div class="img rounded">
-						<img
-							src="https://avatars.githubusercontent.com/u/16906161?v=4"
-							alt="Lucas Passeri`s Photo"
-							width="80px"
-							height="80px"
-							class="rounded"
-						/>
-					</div>
+					<a
+						href="https://github.com/lucaspasseri"
+						target="_blank"
+						rel="noreferrer noopener"
+					>
+						<div class="img rounded">
+							<img
+								src="https://avatars.githubusercontent.com/u/16906161?v=4"
+								alt="Lucas Passeri`s Photo"
+								width="80px"
+								height="80px"
+								class="rounded"
+							/>
+						</div>
+					</a>
 					<div>
 						<p>Hi there,</p>
-						<p>Lucas Passeri (@lucaspasseri)</p>
+						<p>
+							Lucas Passeri (<a
+								href="https://github.com/lucaspasseri"
+								target="_blank"
+								rel="noreferrer noopener"
+								>@lucaspasseri</a
+							>)
+						</p>
 					</div>
 				</div>
 				<div class="nav">
@@ -198,16 +218,14 @@
 			</div>
 			<div class="main-content">
 				<section class="projects">
-					<h2>Your Projects</h2>
+					<h2>Your TOP`s Projects</h2>
 					<div class="cards">
 						<div class="card">
-							<h5>Super Cool Project</h5>
+							<h5>Sign-up Form</h5>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
-								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat. ! Placeat. !
-								Placeat. ! Placeat.
+								This project is intended to give you a chance to flex some of
+								the new items you’ve been absorbing over the past few lessons.
+								This time it’s a sign-up form for an imaginary service.
 							</p>
 							<ul>
 								<li>
@@ -221,34 +239,54 @@
 									</div>
 								</li>
 								<li>
-									<div class="img">
-										<img
-											src="./imgs/view.svg"
-											alt="view"
-											width="28px"
-											height="28px"
-										/>
-									</div>
+									<a
+										href="https://lucaspasseri.github.io/odin-signup-form"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/view.svg"
+												alt="view"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
 								</li>
 								<li>
-									<div class="img">
-										<img
-											src="./imgs/fork.svg"
-											alt="fork"
-											width="28px"
-											height="28px"
-										/>
-									</div>
+									<a
+										href="https://github.com/lucaspasseri/odin-signup-form"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/fork.svg"
+												alt="fork"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="card">
-							<h5>Super Cool Project</h5>
+							<h5>Calculator</h5>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
-								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat.
+								If it's your first time using a
+								<a
+									href="https://www.wikihow.com/Use-a-Calculator"
+									target="_blank"
+									rel="noreferrer noopener"
+									>calculator</a
+								>, all the buttons and options can be a bit scary. But whether
+								you're using a standard calculator or scientific calculator, the
+								basics are pretty much the same. Once you learn what the buttons
+								do and how to use them for different calculations, you'll be
+								more than comfortable using your calculator whenever you need
+								it—inside or outside of school!
 							</p>
 							<ul>
 								<li>
@@ -262,34 +300,117 @@
 									</div>
 								</li>
 								<li>
+									<a
+										href="https://lucaspasseri.github.io/odin-calculator"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/view.svg"
+												alt="view"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a
+										href="https://github.com/lucaspasseri/odin-calculator"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/fork.svg"
+												alt="fork"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+
+						<div class="card">
+							<h5>Rock Paper Scissors</h5>
+							<p>
+								For this project, you will create the game
+								<a
+									href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors"
+									target="_blank"
+									rel="noreferrer noopener"
+									>Rock Paper Scissors</a
+								>. Rock, paper, scissors (also known as Rochambeau, Roshambo, or
+								Janken) is a fun and easy hand game that anyone can learn and
+								enjoy. It’s a great way to make minor decisions when you and a
+								friend can’t agree on something, or even just an entertaining
+								way to pass the time. The neat thing about the game is that
+								almost anybody can pick the rules up in a matter of seconds. In
+								this article, we’ll break the game down so that you and a friend
+								can play whenever you’d like.
+							</p>
+							<ul>
+								<li>
 									<div class="img">
 										<img
-											src="./imgs/view.svg"
-											alt="view"
+											src="./imgs/favorite.svg"
+											alt="favorite"
 											width="28px"
 											height="28px"
 										/>
 									</div>
 								</li>
 								<li>
-									<div class="img">
-										<img
-											src="./imgs/fork.svg"
-											alt="fork"
-											width="28px"
-											height="28px"
-										/>
-									</div>
+									<a
+										href="https://lucaspasseri.github.io/odin-rock-paper-scissors"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/view.svg"
+												alt="view"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a
+										href="https://github.com/lucaspasseri/odin-rock-paper-scissors"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/fork.svg"
+												alt="fork"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="card">
-							<h5>Super Cool Project</h5>
+							<h5>Etch-a-Sketch</h5>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
-								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat.
+								The
+								<a
+									href="https://www.wikihow.com/Master-the-Etch-a-Sketch"
+									target="_blank"
+									rel="noreferrer noopener"
+									>Etch-A-Sketch</a
+								>
+								is widely known as a children's toy, but did you know that it
+								could be used for much more? Etch-A-Sketch is becoming
+								increasingly popular as an art form. With just time and
+								practice, you could draw almost anything on an Etch-a-Sketch.
 							</p>
 							<ul>
 								<li>
@@ -303,34 +424,107 @@
 									</div>
 								</li>
 								<li>
+									<a
+										href="https://lucaspasseri.github.io/odin-etch-a-sketch"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/view.svg"
+												alt="view"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a
+										href="https://github.com/lucaspasseri/odin-etch-a-sketch"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/fork.svg"
+												alt="fork"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+
+						<div class="card">
+							<h5>Landing Page</h5>
+							<p>
+								For this project you’ll be creating an entire web page from a
+								design we’ll provide for you. If you’ve been following along you
+								should have the skills you need to accomplish this, but it may
+								not be easy!<br />
+								The design we’re providing you comes in the form of 2 images:
+								one is an image of the complete website, and one has some
+								details about some of the fonts and colors we’ve used.
+							</p>
+							<ul>
+								<li>
 									<div class="img">
 										<img
-											src="./imgs/view.svg"
-											alt="view"
+											src="./imgs/favorite.svg"
+											alt="favorite"
 											width="28px"
 											height="28px"
 										/>
 									</div>
 								</li>
 								<li>
-									<div class="img">
-										<img
-											src="./imgs/fork.svg"
-											alt="fork"
-											width="28px"
-											height="28px"
-										/>
-									</div>
+									<a
+										href="https://lucaspasseri.github.io/odin-landing-page"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/view.svg"
+												alt="view"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a
+										href="https://github.com/lucaspasseri/odin-landing-page"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/fork.svg"
+												alt="fork"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="card">
-							<h5>Super Cool Project</h5>
+							<h5>Recipes</h5>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
-								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat.
+								It’s time to practice all of the HTML knowledge you have
+								acquired.<br />
+								In this project, you are going to build a basic recipe website.
+								The website will consist of a main index page which will have
+								links to a few recipes. The website won’t look very pretty by
+								the time you’ve finished but it’s important to keep in mind that
+								this project is just to build your HTML chops; we will revisit
+								this project in the future to style it up with CSS.
 							</p>
 							<ul>
 								<li>
@@ -344,106 +538,36 @@
 									</div>
 								</li>
 								<li>
-									<div class="img">
-										<img
-											src="./imgs/view.svg"
-											alt="view"
-											width="28px"
-											height="28px"
-										/>
-									</div>
+									<a
+										href="https://lucaspasseri.github.io/odin-recipes"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/view.svg"
+												alt="view"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
 								</li>
 								<li>
-									<div class="img">
-										<img
-											src="./imgs/fork.svg"
-											alt="fork"
-											width="28px"
-											height="28px"
-										/>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="card">
-							<h5>Super Cool Project</h5>
-							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
-								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat.
-							</p>
-							<ul>
-								<li>
-									<div class="img">
-										<img
-											src="./imgs/favorite.svg"
-											alt="favorite"
-											width="28px"
-											height="28px"
-										/>
-									</div>
-								</li>
-								<li>
-									<div class="img">
-										<img
-											src="./imgs/view.svg"
-											alt="view"
-											width="28px"
-											height="28px"
-										/>
-									</div>
-								</li>
-								<li>
-									<div class="img">
-										<img
-											src="./imgs/fork.svg"
-											alt="fork"
-											width="28px"
-											height="28px"
-										/>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="card">
-							<h5>Super Cool Project</h5>
-							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Eligendi, quidem similique? Suscipit ea corporis tenetur tempora
-								eligendi aut atque aspernatur, dolores molestiae saepe natus,
-								quam consectetur tempore nulla officia! Placeat.
-							</p>
-							<ul>
-								<li>
-									<div class="img">
-										<img
-											src="./imgs/favorite.svg"
-											alt="favorite"
-											width="28px"
-											height="28px"
-										/>
-									</div>
-								</li>
-								<li>
-									<div class="img">
-										<img
-											src="./imgs/view.svg"
-											alt="view"
-											width="28px"
-											height="28px"
-										/>
-									</div>
-								</li>
-								<li>
-									<div class="img">
-										<img
-											src="./imgs/fork.svg"
-											alt="fork"
-											width="28px"
-											height="28px"
-										/>
-									</div>
+									<a
+										href="https://github.com/lucaspasseri/odin-recipes"
+										target="_blank"
+										rel="noreferrer noopener"
+									>
+										<div class="img">
+											<img
+												src="./imgs/fork.svg"
+												alt="fork"
+												width="28px"
+												height="28px"
+											/>
+										</div>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -538,6 +662,5 @@
 				</section>
 			</div>
 		</div>
-		<script src="app.js"></script>
 	</body>
 </html>
